# DownloadMySubstack

./: downloadsubstack.py  pyproject.toml
