[project]
name = "substack-downloader"
version = "1.0.0"
description = "A script to download all posts from a Substack archive as HTML files."
dependencies = [
    "requests",
    "beautifulsoup4",
    # argparse is part of the standard library, so no need to list it
]

[project.scripts]
download-substack = "download_substack:main"